# an-cockrell

./: .gitmodules  An_Cockrell_model.ipynb  PARAMETERS.md  README.md  an-cockrell-runner.py  an-cockrell-viewer.py  pyproject.toml  requirements.txt  setup.py  slurm-job.sh
an_cockrell/: __init__.py  util.py  util.pyx
analysis/: An_Cockrell_model.ipynb  an-cockrell-runner.py  slurm-job.sh
src/an_cockrell/: ORIG_DOCS.md  __init__.py
