[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "an_cockrell"
version = "0.1.0"
authors = [
    { name = "Adam C. Knapp", email = "adam.knapp@medicine.ufl.edu" },
]
description = "Reimplementation of the An-Cockrell Comparative Biology Immune ABM"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs",
    "numpy>=2.0",
    "h5py",
    "matplotlib",
    "scikit-learn",
    "dill",
]

[project.urls]
Homepage = "https://github.com/knappa/an-cockrell"
Issues = "https://github.com/knappa/an-cockrell/issues"

[tool.black]
line-length = 100
target-version = ["py312"]